docroot/includes/deed4.css
/* ... */
.right {
    right: 0;
    -webkit-border-bottom-left-radius: 10px;
    -moz-border-radius-bottomleft: 10px;
    border-bottom-left-radius: 10px;
}

.site-main {
    margin-bottom: 0;
}

#deed {
    color: #333;
    text-align: center;
}

#deed-head {
    background: #00B5DA;
    background: rgba(0,181,218,1);
    background: -moz-linear-gradient(top, rgba(0,181,218,1) 0%, rgba(0,165,200,1) 100%);
    background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(0,181,218,1)), color-stop(100%, rgba(0,165,200,1)));
    background: -webkit-linear-gradient(top, rgba(0,181,218,1) 0%, rgba(0,165,200,1) 100%);
    background: -o-linear-gradient(top, rgba(0,181,218,1) 0%, rgba(0,165,200,1) 100%);
    background: -ms-linear-gradient(top, rgba(0,181,218,1) 0%, rgba(0,165,200,1) 100%);
    background: linear-gradient(to bottom, rgba(0,181,218,1) 0%, rgba(0,165,200,1) 100%);
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00b5da', endColorstr='#00a5c8', GradientType=0 );
    position: relative;
    padding: 0 10px;
}

@media only screen and (max-width : 992px) {
    #deed-head {
        padding: 0 50px;
    }
}

#deed-head h1 {
    margin: 0;
}

#deed-head span, #deed-foot span {
    display: none;
}

#deed-head span.cc-license-icons {
    display: block;
    margin-bottom: 20px;
}

#deed-head span.cc-license-icons .icon {
    display: inline-block;
}

#deed-head span.cc-license-title {
    display: inline;
}

#deed-head span.cc-license-identifier {
    display: inline-block;
}

#cc-logo img, span.icon img {
    width: 62px;
    height: 62px;
}

#deed-head #cc-link {
    display: none;
}

.pd #cc-link {
    display: block;
    position: absolute;
    top: 40px;
    height: 35px;
    width: 200px;
}

.pd #cc-link a {
    height: 35px;
    width: 200px;
}

.red #deed-head {
}

.yellow #deed-head {
}

.green #deed-head {
}

.pd #deed-head {
    height: 100px;
}

.pd-grey #deed-head {
}

#deed-main {
    background-color: #E9E9E9;
    text-align: left;
}

body.rtl #deed-main {
    text-align: right;
}

.pd #deed-main {
    border-color: #bbc0ab;
}

#deed-main .alert {
    background-color: #fff;
    border-color: #fff;
    color: #333;
    border-radius: 0;
}

#deed-main a.inline-help,
#deed-main a.helpLink {
    text-decoration: none;
    font-weight: inherit;
    border-bottom: 1px dashed #888;
    cursor: help;
}

#deed-main-content {
    position: relative;
    margin: 0 15px;
}

#deed-license {
    text-align:center;
    margin-top: 40px;
    margin-bottom: 40px;
    font-weight: bold;
    color: #fff;
}

#deed-license h2 {
    margin: 0;
    font-size: 2em;
    padding: 0;
    line-height: 1.1;
}

/* Desktop small and smaller */
@media only screen and (max-width : 992px) {
    #deed-license h2 {
        font-size: 1.8em;
    }
}

.pd #deed-license {
    position: relative;
    height: 100px;
}

.pd #deed-license h2 {
    position: absolute;
    bottom: 20px;
    color: #333;
    font-size: 2em;
    text-shadow: 0 1px 0 #fff;
    line-height: 1.2;
    margin: 0;
    padding: 0;
    width: 100%;
}

#deed-main img {
    margin-bottom:  5px;
}

#deed-disclaimer {
    margin: 5px auto 0;
    text-align: center;
}

#deed-disclaimer .summary {
}

#deed-disclaimer a {
  font-weight: normal;
}

#deed-rights {
    padding: 0;
}

.popover .popover-content a {
  word-break: break-word;
}

@media only screen and (max-width : 710px) {

}

#deed-conditions {
    padding: 0;
}

#deed-conditions ul {
}

#deed-conditions ul li ul {
    margin-top: 8px;
}

#deed-understanding {
    padding: 0;
    margin-top: 0px;
    margin-bottom: 33px;
}

.pd #deed-understanding {
    padding-left: 10px;
}
.pd #deed-understanding ul {
    padding-left: 0;
}
.pd #deed-understanding ul ul {
    margin-left: 100px;
}

#deed-understanding li.license {
    padding-left:0px;
}

#deed-understanding-zero {
    /*                        padding: 0 10px;*/
    margin-top: -20px;
    margin-bottom: 0px;
}

#deed-understanding ul, #deed-understanding-zero ul {
    list-style-image:none;
    list-style-position:outside;
    list-style-type:none;
}

#deed-understanding ul ul, #deed-understanding-zero ul ul {
    list-style-type:disc;
    margin-top:1em;
}

#deed-conditions div.fineprint {
    padding: 15px;
    border: 1px solid #ddd;
    color: #111;
    font-size: 0.92em;
}

#deed-conditions-no-icons li.license {
  padding-left:0px;
}

ul.license-properties {
  margin-right: 1em;
}

#deed-conditions-no-icons,
#license-freedoms-no-icons {
  margin-right: 1em;
}

#license-freedoms-no-icons li.license {
    padding-left:0px;
}

#deed-foot {
    position: relative;
    padding: 10px 0;
    margin: 0 auto;
    color: #fff;
    text-align: left;
}

body.rtl #deed-foot {
    text-align: right;
}

.pd #deed-foot {
    color: #333;
    overflow-y: inherit;
}

#deed-foot p {
    margin: 0 20px;
    padding: 0;
}

hr {
    background: #ffffff;
    margin-bottom: 0px;
    margin-top: 18px;
}

a {
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
}

.pd a {
    color: #4A4902;
}

.pd #deed-foot {
    height: 70px;
}

.pd-grey #deed-foot {
}

#disclaimer {
    float: right;
    padding-right: 15px;
    padding-left: 20px;
}

li strong {
    color: #222;
}

li {
    margin-bottom: 8px;
}

ul.license-properties {
    list-style-image: none;
    list-style-position: outside;
    list-style-type: none;
}

li.license {
    list-style: none;
    padding-top: 5px;
    position: relative;
    min-height: 74px; /* 62px (icon) + 12px (icon margin) */
}

ul.understanding li.license {
    min-height: inherit;
    padding-bottom: 15px;
}

li.license ul.license-properties {
    padding-left: 0;
}

li.license p {
    margin: 0;
    padding: 0;
}

li.license-hidden {
    list-style: none;
}

li.free {
    background: url("http://mirrors.creativecommons.org/tmp/freedomdefined-50x50.png") 0 0 no-repeat;
}

li.share, li.remix, li.commercial {
    padding-left: 0;
    padding-bottom: 0;
    min-height: 1em;
}
/* ... */

